--- a/src/apps/annotation-text/TextAnnotationDesktop.css
+++ b/src/apps/annotation-text/TextAnnotationDesktop.css
@@ -82,7 +82,7 @@ html, body {
   box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.18), 2px 3px 8px 0 rgba(0, 0, 0, 0.1);
 }
 
-.a9s-popup {
+.r6o-popup.a9s-popup {
   z-index: 999;
 }
 
