Upgraded react-window and fixed breaking changes

--- a/src/apps/annotation-image/IIIF/IIIFThumbnailStrip.css
+++ b/src/apps/annotation-image/IIIF/IIIFThumbnailStrip.css
@@ -15,6 +15,7 @@
 }
 
 .ia-thumbnail-strip .thumbnail-strip-item .label {
+  max-width: 90%;
   overflow: hidden;
   position: relative;
   text-overflow: ellipsis;
