--- a/src/pages/[lang]/collections/index.astro
+++ b/src/pages/[lang]/collections/index.astro
@@ -2,7 +2,7 @@
 import BaseLayout from '@layouts/BaseLayout.astro';
 import { createSupabaseServerClient } from '@backend/supabaseServerClient';
 import { getLangFromUrl, getTranslations } from '@i18n';
-import { getCollections } from '@backend/crud';
+import { getInstanceCollections } from '@backend/crud';
 import { getMyProfile } from '@backend/crud/profiles';
 import { CollectionManagement } from '@apps/collection-management';
 
@@ -23,7 +23,7 @@ if (!data.isOrgAdmin) {
 const me = data;
 
 const { error: collectionsError, data: collections } =
-  await getCollections(supabase);
+  await getInstanceCollections(supabase);
 
 if (collectionsError) {
   console.log(collectionsError);
