--- a/src/pages/reset-password.astro
+++ b/src/pages/reset-password.astro
@@ -1,7 +1,7 @@
 ---
 import { i18n } from 'astro:config/server';
 
-const lang = Astro.preferredLocale || i18n?.defaultLocale || "en";
+const lang = Astro.currentLocale || Astro.preferredLocale || "en";
 
 return Astro.redirect(`/${lang}/reset-password`);
 ---
