--- a/src/pages/[lang]/forgot-password.astro
+++ b/src/pages/[lang]/forgot-password.astro
@@ -1,12 +1,12 @@
 ---
 import BaseLayout from '@layouts/BaseLayout.astro';
-import { ForgotPasswordWrapper } from '@apps/auth-forgot-password';
+import { ForgotPasswordApp } from '@apps/auth-forgot-password';
 import '@themes/login/index.css';
 ---
 <BaseLayout title="Recogito | Forgot Password">
   <div class="container">
     <div class="column">
-      <ForgotPasswordWrapper 
+      <ForgotPasswordApp 
         client:only="react"
       />
     </div>
