--- a/src/pages/[lang]/reset-password.astro
+++ b/src/pages/[lang]/reset-password.astro
@@ -1,13 +1,13 @@
 ---
 import BaseLayout from '@layouts/BaseLayout.astro';
-import { ResetPasswordWrapper } from '@apps/auth-reset-password';
+import { ResetPasswordApp } from '@apps/auth-reset-password';
 import '@themes/login/index.css';
 ---
 
 <BaseLayout title='Recogito | Reset Password'>
   <div class='container'>
     <div class='column'>
-      <ResetPasswordWrapper
+      <ResetPasswordApp
         client:only='react'
       />
     </div>
