--- a/src/pages/[lang]/projects/index.astro
+++ b/src/pages/[lang]/projects/index.astro
@@ -1,7 +1,7 @@
 ---
 import { createSupabaseServerClient } from '@backend/supabaseServerClient';
 import { getMyProfile } from '@backend/crud';
-import { ProjectsHomeWrapper } from '@apps/dashboard-projects';
+import { ProjectsHomeApp } from '@apps/dashboard-projects';
 import { listMyProjectsExtended } from '@backend/helpers';
 import BaseLayout from '@layouts/BaseLayout.astro';
 import { CheckRedirect } from '@components/CheckRedirect';
@@ -27,7 +27,7 @@ if (!projects.data) {
 
 <BaseLayout title='Dashboard'>
   <CheckRedirect client:only='react' />
-  <ProjectsHomeWrapper
+  <ProjectsHomeApp
     client:only='react'
     me={me.data}
     projects={projects.data}
